--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,3 +28,10 @@ body {
 .single-body {
   background-color: rgb(107, 107, 107);
 }
+
+#listings {
+  margin-top: 30px;
+  overflow: scroll;
+  height: 100%;
+  padding: 5px;
+}
