--- a/templates/listing.html
+++ b/templates/listing.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Browse</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/create_listing">Create</a>
+          </li>
         </ul>
 
         <div class="form-inline">
