Update styles, navbar

--- a/templates/listing.html
+++ b/templates/listing.html
@@ -37,6 +37,7 @@
       </div>
     </nav>
 
+    <div class="container">
 
     <div class="row">
       <div class="col"><h2 id="lst-title">{{.Title}}</h2></div>
@@ -64,7 +65,7 @@
       </div>
     </div>
     
-    
+  </div>   
     
     
   </body>
