--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,11 +11,11 @@
 }
 
 body {
-  padding: 10px;
   overflow: hidden;
   background: rgb(34,71,195);
   background: linear-gradient(43deg, rgb(207, 207, 207) 0%, rgba(45,180,253,1) 100%); 
   width: 100%;
+  height: 100%;
 }
 
 .single-container {
@@ -47,9 +47,9 @@ body {
 }
 
 #listings {
-  margin-top: 30px;
+  padding-top: 30px;
   overflow: scroll;
-  height: 100%;
+  height: 90%;
   width: 100%;
   padding: 5px;
   display: flex;
