--- a/static/css/index.css
+++ b/static/css/index.css
@@ -31,7 +31,7 @@ body {
 .single-header {
   display: flex;
   flex-direction: row;
-  justify-content: left;
+  justify-content: space-between;
   width: 100%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -56,4 +56,8 @@ body {
   flex-direction: column;
   align-items: center;
   
+}
+
+.lst-status {
+  margin:3px;
 }
