--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,20 +12,21 @@
 
 body {
   overflow: hidden;
-  background: rgb(34,71,195);
-  background: linear-gradient(43deg, rgb(207, 207, 207) 0%, rgba(45,180,253,1) 100%); 
   width: 100%;
   height: 100%;
 }
 
 .single-container {
-  background-color: rgb(107, 107, 107);
+  background-color: rgb(232, 232, 232);
   border-radius: 10px;
-  height: 15vh;
-  max-height: 15vh;
-  margin: 15px;
-  width: 99%;
+  height: 18vh;
+  max-height: 18vh;
+  min-height: 155px;
+  margin: 8px;
+  width: 80%;
+  padding: 6px;
   border: 1px solid black;
+  overflow: hidden;
 }
 
 .single-header {
@@ -33,9 +34,12 @@ body {
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  background-color: rgb(207, 207, 207);
+  border-radius: 10px;
+  background-color: rgb(189, 189, 189);
+  padding: 5px;
+  min-height: 50px;
+  max-height: 60px;
+  overflow: hidden;
 }
 
 .single-body {
@@ -60,4 +64,17 @@ body {
 
 .lst-status {
   margin:3px;
+}
+
+.lst-desc {
+  overflow: scroll;
+}
+
+.purchased {
+  text-transform: uppercase;
+  text-shadow: 0px 0px 8px green;
+}
+
+.active {
+  text-transform: uppercase;
 }
