--- a/templates/listing.html
+++ b/templates/listing.html
@@ -80,6 +80,7 @@
           <div class="row" id="manage-buttons">
             <button onclick="submit_form_password()" class='btn btn-danger'>Delete</button>
             <button onclick="get_private_details()" class='btn btn-success'>Get Private Details</button>
+            <button onclick="update_listing()" class='btn btn-success'>Update Listing</button>
           </div>
         </div>
       </div>
