--- a/templates/listing.html
+++ b/templates/listing.html
@@ -12,6 +12,7 @@
       const status = {{.Status}};
     </script>
     <script src="/static/js/listing.js"></script>
+    <script src="/static/js/update_listing.js"></script>
   </head>
   <body>
 
@@ -80,7 +81,7 @@
           <div class="row" id="manage-buttons">
             <button onclick="submit_form_password()" class='btn btn-danger'>Delete</button>
             <button onclick="get_private_details()" class='btn btn-success'>Get Private Details</button>
-            <button onclick="update_listing()" class='btn btn-success'>Update Listing</button>
+            <button class='btn btn-success' href='/update'>Update Listing</button>
           </div>
         </div>
       </div>
