--- a/templates/update.html
+++ b/templates/update.html
@@ -80,11 +80,7 @@
             <option>Science</option>
           </select>
         </div>
-        <div class="form-group">
-          <label for="listing_password">Listing Password:</label>
-          <input type="password" id="listing_password" name="listing_password" class="form-control">
-        </div>
-        <button onclick="submit_form()" class='btn btn-success'>Submit</button>
+        <button onclick="update_form()" class='btn btn-success'>Submit</button>
       </div>
     </div>
   </body>
