--- a/templates/update.html
+++ b/templates/update.html
@@ -11,6 +11,9 @@
     <script async defer src="/static/js/bootstrap.js"></script>
     <script src="/static/js/create_listing.js"></script>
     <script src="/static/js/update_listing.js"></script>
+    <script>
+      const listing_id = {{.ID}};
+    </script>
   </head>
   <body>
 
