--- a/templates/update.html
+++ b/templates/update.html
@@ -1,6 +1,5 @@
 <html>
   <body>
-    <p>Hello welcome to the update :)</p>
     <html>
   <head>
     <title>Update Listing</title>
@@ -11,6 +10,7 @@
     <script async defer src="/static/js/bootstrap.js"></script>
     <script src="/static/js/create_listing.js"></script>
     <script src="/static/js/update_listing.js"></script>
+    <script src="/static/js/index.js"></script>
     <script>
       const listing_id = {{.ID}};
     </script>
