--- a/templates/listing.html
+++ b/templates/listing.html
@@ -81,9 +81,16 @@
           <div class="row" id="manage-buttons">
             <button onclick="submit_form_password()" class='btn btn-danger'>Delete</button>
             <button onclick="get_private_details()" class='btn btn-success'>Get Private Details</button>
-            <button class='btn btn-success' href='/update'>Update Listing</button>
+            <!--<button onclick="updateCheckPass()" class='btn btn-success'>Update Listing</button>-->
+           
           </div>
         </div>
+  
+        <div class="well">
+
+          <a href="/listing/{{.ID}}/update" class='btn btn-success' >Update Details of this Listing</a>
+        </div>
+
       </div>
     </div>
     
