--- a/templates/update.html
+++ b/templates/update.html
@@ -83,6 +83,10 @@
             <option>Science</option>
           </select>
         </div>
+        <div class="form-group">
+          <label for="listing_password">Enter Listing Password:</label>
+          <input type="password" id="listing_password" name="listing_password" class="form-control">
+        </div>
         <button onclick="update_form()" class='btn btn-success'>Submit</button>
       </div>
     </div>
